--- a/style.css
+++ b/style.css
@@ -579,3 +579,27 @@ nav {
         width: 100%;
     }
 }
+
+.text {
+  text-align: center;
+}
+
+.hero {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.hero img {
+  width: 100%;
+  height: 20rem;
+  overflow: hidden;
+}
+.hero h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  font-size: 2.5em;
+}
