--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
   font-family: Arial, sans-serif;
   background-color: #0c0a09;
 }
+.my-border{
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  border-left: none;
+  border-right: none;
+}
 
 .main {
   background-color: black;
@@ -46,6 +52,8 @@ header {
 }
 
 .title {
+  font-size: 2rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
   color: #fafaf9;
   text-align: center;
@@ -94,7 +102,7 @@ nav {
 
 
 .home-page-heading {
-  background: url(./img/hogwards\ castle.png);
+  background: url(./image/hogwards\ castle.png);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -208,7 +216,7 @@ nav {
 } */
  
 .content-img-2 {
-  background: url(./img/harry-potter-characters.jpeg) no-repeat center center;
+  background: url(./image/harry-potter-characters.jpeg) no-repeat center center;
   background-size: cover;
   height: 20rem; /* Adjust height as needed */
   width: 20rem;  
@@ -661,4 +669,13 @@ nav {
   padding-left: 7px;
   color: #173B45;
   font-weight: 600;
+}
+
+.hover:hover{
+  color: #b62020;
+}
+
+.hover {
+  text-decoration: none;
+  font-size: 1.2rem;
 }
