--- a/styles/style.css
+++ b/styles/style.css
@@ -598,7 +598,7 @@ nav {
     margin-top: 40px;
     padding-left: 1rem;
     padding-right: 1rem;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
     .text-video {
         flex-direction: column;
@@ -656,19 +656,13 @@ nav {
  min-height: 300px;
  width: 30%;
   background-color: white;
+  box-shadow: -2px -2px 8px white;
   color: #007BFF;
 
 }
-.movie-links a{
-  padding: 1rem;
-}
+
 .movie-links.visible {
   display: block;
-}
-.movie-heading{
-  padding-left: 7px;
-  color: #173B45;
-  font-weight: 600;
 }
 
 .hover:hover{
@@ -678,4 +672,89 @@ nav {
 .hover {
   text-decoration: none;
   font-size: 1.2rem;
+}
+.menu-link{
+
+ background-color: rgba(218, 211, 211, 0.575);
+  margin-top: 1rem;
+  
+  /* border: 1px solid rgb(138, 131, 131) ; */
+  border-radius: 5px;
+  
+}
+.pera{
+  padding: 1rem;
+}
+
+
+.exclusive-videos {
+  padding: 20px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.heading-exlusive{
+  margin: 10px 0;
+  color: #ffcc00;
+}
+.originals{
+  margin-top: 3rem;
+  border-left: 4px solid yellow;
+  color: white;
+  padding-left: 7px;
+  font-weight: bold;
+}
+.videos-container {
+  display: flex;
+  overflow-x: auto;
+  padding: 20px 0;
+}
+
+.video-item {
+  background-color: #111;
+  margin-right: 20px;
+  border-radius: 10px;
+  flex: 0 0 auto;
+  width: 300px;
+  padding: 10px;
+  outline: none;
+}
+.my-item{
+  border-radius: 1rem;
+}
+
+
+.video-info {
+  padding: 10px;
+}
+
+.video-info p {
+  margin: 10px 0;
+}
+
+.video-info a {
+  color: #00f;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.video-info .stats {
+  margin-top: 10px;
+}
+
+.stats span {
+  margin-right: 10px;
+  font-size: 0.9em;
+}
+
+@media (max-width: 768px) {
+  .videos-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .video-item {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
